--- a/RoomRender/package.json
+++ b/RoomRender/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "roomrender",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.12",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.20",
-    "expo": "~50.0.7",
-    "expo-camera": "^14.0.5",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-paper": "^5.12.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+	"name": "roomrender",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-native-community/masked-view": "^0.1.11",
+		"@react-navigation/bottom-tabs": "^6.5.12",
+		"@react-navigation/native": "^6.1.17",
+		"@react-navigation/native-stack": "^6.9.20",
+		"expo": "~50.0.7",
+		"expo-camera": "^14.0.5",
+		"expo-status-bar": "~1.11.1",
+		"react": "18.2.0",
+		"react-native": "0.73.4",
+		"react-native-gesture-handler": "^2.16.0",
+		"react-native-paper": "^5.12.3",
+		"react-native-reanimated": "^3.8.1",
+		"react-native-safe-area-context": "^4.9.0",
+		"react-native-screens": "^3.30.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0"
+	},
+	"private": true
 }
